--- a/installers/windows/ReadMe.htm
+++ b/installers/windows/ReadMe.htm
@@ -1,181 +1,173 @@
 <html>
 <head>
-<title>Monero Fluorine Fermi GUI Wallet</title>
+<title>xCash GUI Wallet</title>
 </head>
 
 <body style="font-family: Arial, Helvetica, sans-serif">
-<h1>Monero Fluorine Fermi GUI Wallet</h1>
+<h1>xCash GUI Wallet</h1>
 
-  <p>Copyright (c) 2014-2024, xCash Forked from The Monero Project</p>
+<p>Copyright (c) 2014–2025, X-Cash Project (forked from The Monero Project)</p>
 
 <h2>Preface</h2>
 
-  <p>This ReadMe does not aim to be a complete introduction to Monero. If you are new to Monero or even to
-    cryptocurrencies in general you find a good introduction on reddit at
-    <a href="https://www.reddit.com/r/Monero/comments/5zgail/rmonero_newcomers_please_read_everything_you_need/">Newcomers Please Read. Everything You Need To Know</a>.
-    You also find a lot of good tutorials on <a href="https://www.monero.how/">Monero.How</a>.
-  </p>
+<p>
+  This ReadMe does not aim to be a complete introduction to xCash or to cryptocurrencies in general.
+  If you are new to crypto, it is worth spending some time with general introductions to
+  private, proof-of-work coins and basic wallet concepts before you move significant value.
+</p>
 
-  <p>Please note that Monero and its software are constantly evolving and progressing; it probably won't take
-  long for some of the information here to become outdated.
-  </p>
+<p>
+  Please note that xCash and its software are constantly evolving; it probably won't take
+  long for some of the information here to become outdated. Always consult the official
+  project channels for the latest details.
+</p>
 
 <h2>Content of the Package</h2>
 
-  <p>You just installed the <i>Monero GUI wallet</i> for Windows, release Fluorine Fermi, version {#GuiVersion}.
-  The wallet enables you to send and receive Moneroj in a secure and very private way.
-  </p>
+<p>
+  You just installed the <i>xCash GUI wallet</i> for Windows, version {#GuiVersion}.
+  The wallet enables you to send and receive xCash in a secure and privacy-preserving way.
+</p>
 
-  <p>Also included is the <i>Monero daemon</i>, so you have everything now to run a so-called <i>full node</i>
-  and become part of the network of nodes that manages the Monero blockchain; you don't need to install additional
-  packages in order to start.</p>
+<p>
+  This installer is focused on the <i>GUI wallet</i> and related command-line tools.
+  It is configured to use <b>remote nodes</b> by default, so you can start using xCash
+  without running your own full node on this machine.
+</p>
 
-  <p>For checking whether there are already newer versions of this package you can go to the
-  <a href="https://getmonero.org/downloads/">Downloads</a> page on <a href="https://getmonero.org/">getmonero.org</a>,
-  the official Monero site.</p>
+<p>
+  For checking whether there are newer versions of this package, please visit the official
+  X-Cash project site or release pages linked from the community channels.
+</p>
 
 <h2>Upgrading</h2>
-  
-  <p>If you have already a release of the GUI wallet software on your computer that was installed with the help
-  of this installer (in an earlier version), upgrading is easy: Just run the new installer; there is no need to
-  uninstall the old Monero release first.</p>
 
-  <p>But if you run a release of the GUI wallet software that you downloaded as a .zip file and unzipped into a
-  folder, if you "installed it manually" so to say, don't try to upgrade by pointing the installer to that folder,
-  because this might lead to problems e.g. if you try to uninstall everything later.</p>
-  
-  <p>It's better to let the installer put the software into another folder and then delete the old folder, either
-  outright or after moving away any additional files that you may have stored there. (If you did not change
-  default locations for wallets and the blockchain, you don't have to worry about them, they won't be in that
-  particular folder, but elsewhere "in safety".)</p>
+<p>
+  If you already have a release of the xCash GUI wallet on your computer that was installed
+  with the help of this installer (in an earlier version), upgrading is easy:
+  just run the new installer; there is no need to uninstall the old release first.
+</p>
+
+<p>
+  If you previously downloaded a zip file and unpacked a “portable” GUI wallet into a folder,
+  do not try to upgrade by pointing this installer at that same folder — it can make
+  uninstalling later messy.
+</p>
+
+<p>
+  Instead, let this installer place the software into its own folder and then remove the old
+  folder manually (after moving away any extra files you may have stored there).
+  Wallet files and other user data are normally stored in separate locations and are not
+  deleted by simply removing the old program folder.
+</p>
 
 <h2>Access to the Blockchain</h2>
 
-  <p>Any Monero wallet needs access to the <i>blockchain</i>, the ongoing ledger of all Monero transactions. For the
-  GUI wallet there are two principal ways to get that access: You can let Monero sync with the network
-  i.e. let it download the blockchain and store it locally on your computer, or you can configure your wallet to
-  access a remote <i>open node</i> to get indirect access to the blockchain.</p>
+<p>
+  Any xCash wallet needs access to the <i>blockchain</i>, the ongoing ledger of all xCash
+  transactions. For the GUI wallet there are two principal ways to get that access:
+</p>
 
-  <p>You can also <i>Prune</i> the blockchain in order to save 2/3 of storage space while keeping the full transaction history.
-  More information regarding how pruning works can be found <a href="https://www.getmonero.org/resources/moneropedia/pruning.html">here</a>.</p> 
+<ul>
+  <li>
+    Use a <b>remote node</b> (default): the wallet connects over the network to a node
+    operated by you on another machine or by a third party.
+  </li>
+  <li>
+    Run your own <b>full node</b>: you run the <i>xcashd</i> daemon locally and let it
+    maintain a full copy of the blockchain on your computer or server.
+  </li>
+</ul>
 
-  <p>Working with your own copy of the blockchain, even pruned, is <b>preferred</b>: It strengthens the Monero network, and it
-  provides the most security and privacy possible for you.</p>
+<p>
+  Using your own full node provides the strongest security and privacy, because you are not
+  relying on any third-party node to answer your wallet’s requests. However, running a full node
+  requires additional disk space, bandwidth, and some technical understanding.
+</p>
 
-  <p>However if your Internet access makes it difficult to run a full node, or if you have simply no room to store
-  the blockchain locally (about 160 GB in June 2023, and of course growing), you can compromise and try to connect
-  to a remote node. One way of finding such a node is checking
-  <a href="https://moneroworld.com/#nodes">this page</a>.
-  </p>
+<p>
+  For many users, especially on laptops or limited hardware, using a trusted remote node
+  is a practical compromise that allows you to use xCash without storing the full chain locally.
+</p>
 
-<h2>Initial Blockchain Download</h2>
+<h2>Initial Synchronization</h2>
 
-  <p>Please do read the following <b>before</b> jumping right in and starting the GUI wallet:</p>
+<p>
+  Even when using a remote node, your wallet must still <i>scan</i> the blockchain to discover
+  transactions belonging to your addresses. This process is called synchronization or “sync”.
+</p>
 
-  <p>If you decide to work with your own copy of the blockchain, which you should whenever possible, you have to
-  download it first; it's not part of the installed package.
-  Beside the GUI wallet there is second program, the so-called <i>Monero daemon</i>, which will carry out that download.
-  You find it in the <i>Utilities</i> sub-folder of the program group.</p>
+<p>
+  The time required depends on several factors, including network speed, node responsiveness,
+  and how long it has been since the wallet was last opened. The first sync for a brand-new
+  wallet may take longer than subsequent sessions.
+</p>
 
-  <p>Depending on your Internet access, the speed of your computer and the type of disk you use (HDD or SSD) this can take
-  <b>several hours</b>, in some cases <b>more than a day</b>. Furthermore there are unfortunate cases where the
-  download gets stuck somehow or doesn't work at all, e.g. because a firewall prevents access to other nodes of the
-  Monero network.</p>
-
-  <p>The GUI wallet can start the daemon for you. You can also use the <i>Monero Daemon</i> icon in the <i>Utilities</i>
-  sub-folder of the Monero program group.</p>
-   
-  <p>If all goes well the daemon will finally display a message like this:
-  <i>You are now synchronized with the network.</i></p>
-
-  <p><b>Then</b> you are ready for sure to start your Monero adventures by starting the GUI wallet.</p>
-
-<h2>Allowing Other Nodes to Connect to Your Node</h2>
-
-  <p>When the Monero daemon downloads the blockchain it does so by connecting to other nodes of the network.</p>
-
-  <p>If you allow incoming TCP/IP connections to port 18080 on your computer and let your daemon run for extended
-  periods of time you can "return the favor" and help others in turn to get access to Monero. However, depending on
-  your Internet connection, firewall, modem, router, ISP etc. this might not be possible, and opening a port in such
-  a way usually requires some technical knowledge.</p>
-
-  <p>If you want to try you may start e.g. with
-  <a href="https://monero.stackexchange.com/questions/2479/how-do-i-enable-incoming-connections-eli5">this Monero Stack Exchange</a>
-  question.</p>
+<p>
+  If you choose to run your own full node with <i>xcashd</i> (downloaded separately), the daemon
+  itself will first have to download and verify the blockchain. This can take many hours on a
+  fresh system, depending on your hardware and connection.
+</p>
 
 <h2>Troubleshooting</h2>
 
-  <p>The Monero software and especially the GUI wallet are "work in progress", and sometimes things go wrong.</p>
+<p>
+  The xCash software and especially the GUI wallet are still evolving. Occasionally,
+  things can go wrong or behave in unexpected ways.
+</p>
 
-  <p>Please note that despite any technical problems that you may encounter your Moneroj are almost always safe: You may
-  not be able to move them or you even may not see how many you currently have, but you most probably won't lose any.
-  But do remember that the seed needed to re-create the wallet <b>is</b> critical, however: <b>Never lose your
-  seed!</b></p>
+<p>
+  Despite technical problems you may encounter, your xCash coins are almost always safe:
+  you may temporarily be unable to move them or see the correct balance, but you usually
+  won’t lose funds as long as you keep your recovery information secure.
+</p>
 
-  <p>In the <i>Utilities</i> sub-folder there are several more icons that may help you to solve problems.
-  These are the icons with a <i>x</i> in front and the name <i>(in parenthesis)</i> to make them visually stand
-  apart from the "normal" ones because you will probably only need them in case of trouble, but not during normal
-  use of Monero.</p>
+<p>
+  The most critical piece of information is your wallet’s seed (or equivalent backup).
+  <b>Never lose your seed, and never share it with anyone.</b>
+</p>
 
-  <p>Here an overview and short info what each icon does:</p>
+<p>
+  In the <i>Utilities</i> sub-folder of the xCash program group there are several icons that
+  may help you solve problems. These are the icons with an <i>x</i> in front and a descriptive
+  name in parentheses to make them visually stand out from the “everyday” entries.
+</p>
 
-  <table cellpadding="3" border="1">
-    <tr>
-      <td><i>x (Try GUI Wallet Low Graphics Mode)</i></td>
-      <td>Run the GUI wallet in a mode that allows for low-graphics
-        environments, e.g. systems with very simple non-hardware-accelerated or emulated / virtualized video cards;
-       also try if the display is simply slow or lags
-      </td>
-    </tr>
+<p>Here is an overview of the utilities installed with this GUI package:</p>
 
-    <tr>
-      <td><i>x (Try Daemon, Exit Confirm)</i></td>
-      <td>
-        Run the Monero daemon in a window that does not automatically close if
-        the daemon should exit because of a fatal error; useful in cases where the normal daemon icon
-        just leads to a window that closes right away
-      </td>
-    </tr>
+<table cellpadding="3" border="1">
+  <tr>
+    <td><i>x (Try GUI Wallet Low Graphics Mode)</i></td>
+    <td>
+      Run the GUI wallet in a mode that is more tolerant of
+      low-end or virtualized graphics hardware. Use this if the normal wallet window
+      fails to appear, renders incorrectly, or feels very slow.
+    </td>
+  </tr>
 
-    <tr>
-      <td><i>x (Try Kill Daemon)</i></td>
-      <td>
-        Kill any running daemon (technically, any process called <i>xcashd.exe</i>), whether
-        with or without any visible window, for starting "with a clean slate"; easier than
-        killing such tasks with the help of the Windows Task Manager
-      </td>
-    </tr>
+  <tr>
+    <td><i>x (Check GUI Wallet Log)</i></td>
+    <td>
+      Open the log file containing status and error messages from the GUI wallet in Notepad.
+      This can be useful for diagnostics; the last few lines often contain the most relevant
+      information if something has gone wrong.
+    </td>
+  </tr>
 
-    <tr>
-      <td><i>x (Check GUI Wallet Log)</i></td>
-      <td>Open the log with status and error messages of the GUI wallet program in Notepad;
-      experienced people have a chance to diagnose technical problems with the wallet,
-      usually by looking at the last few lines of this log</td>
-    </tr>
+  <tr>
+    <td><i>x (Check Default Wallet Folder)</i></td>
+    <td>
+      Open the standard wallet storage folder in Windows Explorer. This is useful if you want
+      to back up your wallet files or inspect them directly.
+    </td>
+  </tr>
+</table>
 
-    <tr>
-      <td><i>x (Check Daemon Log)</i></td>
-      <td>
-        Open the log with status and error messages of the daemon in Notepad; again, the last few
-        lines of this (possible very long) log are usually the most important for troubleshooting
-      </td>
-    </tr>
-
-    <tr>
-      <td><i>x (Check Default Wallet Folder)</i></td>
-      <td>
-        Open the standard wallet folder in Windows Explorer; useful e.g. if you want to backup
-        your wallets
-      </td>
-    </tr>
-
-    <tr>
-      <td><i>x (Check Blockchain Folder)</i></td>
-      <td>
-        Open the folder containing the blockchain in Windows Explorer
-      </td>
-    </tr>
-  </table>
+<p>
+  If you encounter issues you cannot resolve, consider collecting the GUI log and any error
+  messages and sharing them (redacting sensitive information) with the xCash community or
+  support channels for further assistance.
+</p>
 
 </body>
 </html>
