--- a/installers/windows/ReadMe.htm
+++ b/installers/windows/ReadMe.htm
@@ -6,18 +6,18 @@
 <body style="font-family: Arial, Helvetica, sans-serif">
 <h1>xCash GUI Wallet</h1>
 
-<p>Copyright (c) 2014–2025, X-Cash Project (forked from The Monero Project)</p>
+<p>Copyright (c) 2014–2025, XCash-Labs Project (forked from The Monero Project)</p>
 
 <h2>Preface</h2>
 
 <p>
-  This ReadMe does not aim to be a complete introduction to xCash or to cryptocurrencies in general.
+  This ReadMe does not aim to be a complete introduction to xCash Klassic or to cryptocurrencies in general.
   If you are new to crypto, it is worth spending some time with general introductions to
   private, proof-of-work coins and basic wallet concepts before you move significant value.
 </p>
 
 <p>
-  Please note that xCash and its software are constantly evolving; it probably won't take
+  Please note that xCash Klassic and its software are constantly evolving; it probably won't take
   long for some of the information here to become outdated. Always consult the official
   project channels for the latest details.
 </p>
@@ -26,12 +26,12 @@
 
 <p>
   You just installed the <i>xCash GUI wallet</i> for Windows, version {#GuiVersion}.
-  The wallet enables you to send and receive xCash in a secure and privacy-preserving way.
+  The wallet enables you to send and receive xCash Klassic in a secure and privacy-preserving way.
 </p>
 
 <p>
   This installer is focused on the <i>GUI wallet</i> and related command-line tools.
-  It is configured to use <b>remote nodes</b> by default, so you can start using xCash
+  It is configured to use <b>remote nodes</b> by default, so you can start using xCash Klassic
   without running your own full node on this machine.
 </p>
 
@@ -43,7 +43,7 @@
 <h2>Upgrading</h2>
 
 <p>
-  If you already have a release of the xCash GUI wallet on your computer that was installed
+  If you already have a release of the xCash Klassic GUI wallet on your computer that was installed
   with the help of this installer (in an earlier version), upgrading is easy:
   just run the new installer; there is no need to uninstall the old release first.
 </p>
@@ -64,8 +64,8 @@
 <h2>Access to the Blockchain</h2>
 
 <p>
-  Any xCash wallet needs access to the <i>blockchain</i>, the ongoing ledger of all xCash
-  transactions. For the GUI wallet there are two principal ways to get that access:
+  Any xCash Klassic wallet needs access to the <i>blockchain</i>, the ongoing ledger of all xCash Klassic
+  transactions. For the GUI wallet there is one principal ways to get that access:
 </p>
 
 <ul>
@@ -73,21 +73,11 @@
     Use a <b>remote node</b> (default): the wallet connects over the network to a node
     operated by you on another machine or by a third party.
   </li>
-  <li>
-    Run your own <b>full node</b>: you run the <i>xcashd</i> daemon locally and let it
-    maintain a full copy of the blockchain on your computer or server.
-  </li>
 </ul>
 
 <p>
-  Using your own full node provides the strongest security and privacy, because you are not
-  relying on any third-party node to answer your wallet’s requests. However, running a full node
-  requires additional disk space, bandwidth, and some technical understanding.
-</p>
-
-<p>
   For many users, especially on laptops or limited hardware, using a trusted remote node
-  is a practical compromise that allows you to use xCash without storing the full chain locally.
+  is a practical compromise that allows you to use xCash Klassic without storing the full chain locally.
 </p>
 
 <h2>Initial Synchronization</h2>
@@ -103,21 +93,15 @@
   wallet may take longer than subsequent sessions.
 </p>
 
-<p>
-  If you choose to run your own full node with <i>xcashd</i> (downloaded separately), the daemon
-  itself will first have to download and verify the blockchain. This can take many hours on a
-  fresh system, depending on your hardware and connection.
-</p>
-
 <h2>Troubleshooting</h2>
 
 <p>
-  The xCash software and especially the GUI wallet are still evolving. Occasionally,
+  The xCash Klassic software and especially the GUI wallet are still evolving. Occasionally,
   things can go wrong or behave in unexpected ways.
 </p>
 
 <p>
-  Despite technical problems you may encounter, your xCash coins are almost always safe:
+  Despite technical problems you may encounter, your xCash Klassic coins are almost always safe:
   you may temporarily be unable to move them or see the correct balance, but you usually
   won’t lose funds as long as you keep your recovery information secure.
 </p>
@@ -128,7 +112,7 @@
 </p>
 
 <p>
-  In the <i>Utilities</i> sub-folder of the xCash program group there are several icons that
+  In the <i>Utilities</i> sub-folder of the xCash Klassic program group there are several icons that
   may help you solve problems. These are the icons with an <i>x</i> in front and a descriptive
   name in parentheses to make them visually stand out from the “everyday” entries.
 </p>
@@ -165,7 +149,7 @@
 
 <p>
   If you encounter issues you cannot resolve, consider collecting the GUI log and any error
-  messages and sharing them (redacting sensitive information) with the xCash community or
+  messages and sharing them (redacting sensitive information) with the xCash-Labs community or
   support channels for further assistance.
 </p>
 
